# TSP-SmartAIRoute

./:  CLAUDE.md  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PHASE_STATUS.md  README.md  SmartRouteAI_MasterGuide_v3_FINAL.md  SmartRouteAI_Start.bat  SmartRouteAI_Start.sh  SmartRouteAI_Stop.bat  SmartRouteAI_Stop.sh  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run-all-services.bat  run-all-services.sh  tsconfig.base.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260409_1200_create_problems_table.py  20260409_1300_create_jobs_and_solver_runs.py  20260410_0900_extend_solver_runs_and_create_comparisons.py
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: comparisons.py  health.py  (+3 more)
apps/api/app/core/: settings.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  comparison.py  job.py  problem.py  solver_run.py
apps/api/app/services/: benchmarker.py  health.py  jobs.py  normalizer.py  parser.py  recommender.py  validator.py
apps/api/app/solvers/: __init__.py  aco.py  base.py  de.py  ga.py  nsga2.py  ortools_solver.py  pso.py  sa.py  tabu.py
apps/api/app/workers/: __init__.py  celery_client.py  tasks.py
apps/api/tests/: conftest.py  test_comparisons.py  test_health.py  test_jobs.py  test_parser.py  test_problems.py  test_solvers.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/tests/: test_ping.py
apps/worker/worker_app/: celery_app.py  tasks.py
(+56 files in other folders)
