[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smartroute-api"
version = "1.0.0"
description = "FastAPI backend for SmartRoute AI."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2.0",
  "fastapi>=0.110,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.1,<9.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
