[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smartroute-worker"
version = "1.0.0"
description = "Celery worker for SmartRoute AI."
requires-python = ">=3.12"
dependencies = [
  "celery[redis]>=5.4,<6.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1,<9.0",
]

[tool.setuptools.packages.find]
include = ["worker_app*"]

